--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/a4b78c9982.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a4b78c9982.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Formación Complementaria</title>
   </head>
   <body>
