--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://kit.fontawesome.com/a4b78c9982.js" crossorigin="anonymous"></script>
-    <title>Formación Complementaria</title>
+    <title>SGFC</title>
   </head>
   <body>
     <div id="root"></div>
